Try to fix error with streetview stack overflow but ultimately give up (see FIXME) Fix bug where open marker would get duplicated on refresh

--- a/app/assets/stylesheets/base.css
+++ b/app/assets/stylesheets/base.css
@@ -262,6 +262,21 @@ div#tab-1 table#footer a#add_review:hover {
   overflow: auto;
 }
 
+div#observation_list {
+}
+div.observation {
+  border-bottom: 1px solid #EEE;
+}
+div.obsphoto {
+  float: right;
+  padding: 0 0 0 5px;
+  background: #EEE:
+  width: 100px;
+  text-align: center;
+  color: #555555;
+  font-style: italic;
+}
+
 /*** Street View Tab ***/
 
 #tab-3 {
